--- a/arch/arm/boot/dts/imx6sx-udoo-neo-externalpins.dtsi
+++ b/arch/arm/boot/dts/imx6sx-udoo-neo-externalpins.dtsi
@@ -69,6 +69,16 @@
 			>;
 		};
 
+		pinctrl_nxpbal: nxpbalgrp {
+			fsl,pins = <
+				MX6SX_PAD_SD4_CLK__ECSPI2_MISO		0x100b1
+				MX6SX_PAD_SD4_CMD__ECSPI2_MOSI		0x100b1
+				MX6SX_PAD_SD4_DATA1__ECSPI2_SCLK	0x100b1
+				/*  CS SPI 1  */
+				MX6SX_PAD_SD4_DATA0__GPIO6_IO_14	0x0b0b1
+			>;
+		};
+
 		pinctrl_uart1: uart1grp-1 {
 			fsl,pins = <
 				MX6SX_PAD_GPIO1_IO04__UART1_TX          0x1b0b1
@@ -161,6 +171,7 @@
 //	status = "okay";						                              // {{required-by-sound_dac}}
 //};										                                      // {{required-by-sound_dac}}
 
+/*
 &ecspi2 {
 	fsl,spi-num-chipselects = <1>;
 	cs-gpios = <&gpio6 14 GPIO_ACTIVE_LOW>;
@@ -173,6 +184,23 @@
 		reg = <0>;
 		spi-max-frequency = <2000000>;
 	};
+};
+*/
+
+&nxpbal {
+	fsl,spi-num-chipselects = <1>;
+	cs-gpios = <&gpio6 14 GPIO_ACTIVE_LOW>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_nxpbal>;
+	status = "okay";
+
+        bal: nxprdlib-bal@0{
+        	compatible = "nxp,bal";
+	        reg=<0>;
+	        busy-pin-gpio = <&gpio4 10 GPIO_ACTIVE_LOW>;
+	        spi-max-frequency = <6000000>;
+	        status = "okay";
+        };
 };
 
 &uart1 {
