--- a/arch/arm/boot/dts/imx6sx.dtsi
+++ b/arch/arm/boot/dts/imx6sx.dtsi
@@ -317,7 +317,7 @@
 					clock-names = "ipg", "per";
 					dmas = <&sdma 5 7 1>, <&sdma 6 7 2>;
 					dma-names = "rx", "tx";
-					status = "disabled";
+					status = "okay";
 				};
 
 				ecspi3: ecspi@02010000 {
